bk_ida/gccida/c0/simplify_giv_expr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6885:1: error: must use 'enum' tag to refer to type 'iv_mode'
iv_mode type; // [rsp+18h] [rbp-188h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6897:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+140h] [rbp-60h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6897:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+140h] [rbp-60h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6898:4: error: expected ';' after expression
rtx temf; // [rsp+148h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6898:5: error: use of undeclared identifier 'temf'
rtx temf; // [rsp+148h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6899:4: error: expected ';' after expression
rtx temg; // [rsp+148h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6899:5: error: use of undeclared identifier 'temg'
rtx temg; // [rsp+148h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6901:4: error: expected ';' after expression
rtx temh; // [rsp+148h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6901:5: error: use of undeclared identifier 'temh'; did you mean 'tem'?
rtx temh; // [rsp+148h] [rbp-58h] 
    ^~~~
    tem
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6900:18: note: 'tem' declared here
 struct rtx_def *tem; // [rsp+148h] [rbp-58h] 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6902:4: error: expected ';' after expression
rtx temi; // [rsp+148h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6902:5: error: use of undeclared identifier 'temi'; did you mean 'tem'?
rtx temi; // [rsp+148h] [rbp-58h] 
    ^~~~
    tem
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6900:18: note: 'tem' declared here
 struct rtx_def *tem; // [rsp+148h] [rbp-58h] 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6904:4: error: expected ';' after expression
rtx temb; // [rsp+148h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6904:5: error: use of undeclared identifier 'temb'
rtx temb; // [rsp+148h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6905:4: error: expected ';' after expression
rtx temc; // [rsp+148h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6905:5: error: use of undeclared identifier 'temc'
rtx temc; // [rsp+148h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6906:4: error: expected ';' after expression
rtx temd; // [rsp+148h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6906:5: error: use of undeclared identifier 'temd'
rtx temd; // [rsp+148h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6907:4: error: expected ';' after expression
rtx teme; // [rsp+148h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/loop.c:6907:5: error: use of undeclared identifier 'teme'
rtx teme; // [rsp+148h] [rbp-58h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_giv_expr/src/obj/loop.o] Error 1
